force-app/main/default/objects/AsyncJob__e/AsyncJob__e.object-meta.xml
<CustomObject>
    <label>Async Job</label>
    <pluralLabel>Async Jobs</pluralLabel>
</CustomObject>