force-app/main/default/objects/AsyncJob__e/fields/JobType__c.field-meta.xml
<CustomField>
    <fullName>JobType__c</fullName>
    <label>Job Type</label>
    <type>Text</type>
    <length>50</length>
</CustomField>